### Update 1.12 🎉 (October 27, 2024)

- The buttons on the main window toolbar have reverted back to the Fluent interface tooltips.
- All buttons in the mini-player have also gotten modern Fluent interface tooltips.
- PyQt updated to 5.15.11.
- PyQtWebEngine updated to 5.15.7.
- Other minor fixes and improvements.

### Update 1.12-rc1 🎉 (October 27, 2024)

- The color of the toolbar in the main window has become darker.
- Mini player now tracks track progress in real time - in the left corner current track time, in the right total track time.
- System Tray App Icon plugin is now enabled by default.
- Mini player is now available to open at any URL.
- Improved saving of settings.
- Discord Rich Presence plugin buttons have been removed.
- Clicking the System Tray App Icon now only shows the window when minimized.
- Added Restart + Save button in the settings window.
- The Save button in the settings window is now enabled only if there is actually something to save.
- PyQt-Fluent-Widgets updated to 1.7.0.
- The Discord Rich Presence plugin now displays your Discord activity as “Listening” instead of “Playing”.
- Other minor fixes and improvements.

### Update 1.11.4 🎉 (October 16, 2024)

- Fixed a download error for children's content.
- Fixed an application crash related to the Discord RPC plugin not being able to update profile information about the currently playing song due to the song/album name exceeding 128 characters.
- Updated pytubefix to version 8.0.0.
- Other minor corrections.

### Update 1.11.3 🎉 (October 9, 2024)

- A small fix for the Discord Rich Presence plugin.

### Update 1.11.2 🎉 (October 4, 2024)

- Small fix for Ad Blocker (Skipper) plugin - now ads are skipped noticeably faster.
- Track thumbnail in miniplayer is now loaded via proxy if it is installed.
- Updated pytubefix to version 7.2.2.
- Discord Rich Presence plugin now has buttons again, namely “Play in Browser” and “YTMDPlayer on GitHub”.