@@ -1,5 +1,5 @@
-from PyQt5.QtWidgets import QSystemTrayIcon
 from PyQt5.QtGui import QIcon
+from PyQt5.QtWidgets import QSystemTrayIcon
 from qfluentwidgets import SystemTrayMenu, Action
 
 class SystemTrayIcon(QSystemTrayIcon):
