@@ -1,8 +1,9 @@
 packaging==24.1
-pypresence==4.3.0
 PyQt5==5.15.11
 PyQtWebEngine==5.15.7
 PyQt_Fluent_Widgets==1.7.0
 pytubefix==8.0.0
 pywinstyles==1.8
 Requests==2.32.3
+
+git+https://github.com/qwertyquerty/pypresence.git@master
